--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -545,7 +545,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** In predicting `0` (healthy loan) model it was very accurate with but, for the `1` (high-risk loan) model it didn't achieve the same level of accuracy."
    ]
   },
   {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,20 +580,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_train_resample, y_train_resample = oversampler.fit_resample(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    56271\n",
+       "1    56271\n",
+       "Name: loan_status, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_train_resample.value_counts()"
    ]
   },
   {
@@ -605,19 +618,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "LogisticRegression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "LogisticRegression_model.fit(X_train_resample, y_train_resample)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "prediction_resample = LogisticRegression_model.predict(X_test)\n",
+    "prediction_resample"
    ]
   },
   {
@@ -635,32 +660,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "balanced_accuracy Score: 0.9936781215845847\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "print(f\"balanced_accuracy Score: {balanced_accuracy_score(y_test, prediction_resample)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18649,   116],\n",
+       "       [    4,   615]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, prediction_resample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.84      0.99      0.91       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.99      0.95     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report(y_test, prediction_resample))"
    ]
   },
   {
@@ -676,8 +737,32 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** With oversampled data the accuracy of both `0` (healthy loan) and `1` (high-risk loan) models increased to be both highly accurate."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Credit Risk Analysis Report\n",
+    "\n",
+    "Overview: This machine learning model is used to perdict the credit risk of loan applicants to see if they are a high-risk or low-risk borrower based on the factors of loan size, interest rate, borrower income, debt-to-income, number of accounts, derogatory marks, and total debt.\n",
+    "\n",
+    "Accuracy Scores: The accuracy scores for the model was at a 0.99 in the test showing that it had a high level of accuracy.\n",
+    "\n",
+    "Precision Scores: The percision score for healthy loan are 1.00 showing that the model correctly identifies all the relevant data points for healthy loan. While for high-risk loans it is at a 0.84 showing its ability to correctly identifies 84% of relevent data points.\n",
+    "\n",
+    "Recall Scores: The recall score for the healthy and high-risk loan are the same both at .99 showing how accurate the model was able to classify all positive instances.\n",
+    "\n",
+    "Summary: The model using the resampled data show high accuracy in all aspects of the test proving itself useful when make a prediction "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
