New: Update on Credit Risk Analysis Report

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -754,15 +754,8 @@
     "\n",
     "Recall Scores: The recall score for the healthy and high-risk loan are the same both at .99 showing how accurate the model was able to classify all positive instances.\n",
     "\n",
-    "Summary: The model using the resampled data show high accuracy in all aspects of the test proving itself useful when make a prediction "
+    "Summary: The model using the resampled data show high accuracy in all aspects of the test proving itself useful and reliable when make a prediction for loan applicants. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
